demo/setup/stage0/security.pass.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.pass
spec:
  tier: security
  order: 2000
  ingress:
    - action: Pass
  egress:
    - action: Pass
  types:
    - Ingress
    - Egress
